# tls_file_backup

./: .gitignore  Cargo.toml  README.md  dev_client.sh  dev_server.sh  file_backup_client.sh  file_backup_server.sh  mkcert_development_CA_235012423521855554935067747968635886022.crt
sh_scripts/: dev_client.sh  dev_server.sh  file_backup_client.sh  file_backup_server.sh  install.sh
src/: common.rs  connection.rs  lib.rs
systemd_files/: file_backup_client.service  file_backup_client.timer  file_backup_server.service
