[package]
name = "file_backup_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
rustls = {version = "0.22.2"}
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.0.0"
tokio = {version = "1.35.1", features = ["full"]}
tokio-rustls = "0.25.0"
