[package]
name = "file_backup_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tar = "0.4.2"
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
flate2 = "1.0.28"
log = "0.4.20"
regex = "1.10.3"
reqwest = "0.11.24"
rustls = { version = "0.22.2" }
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.3.0"
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
webpki-roots = "0.26.1"
